--- a/WebClient/Views/ServiceCluster/getAll.cshtml
+++ b/WebClient/Views/ServiceCluster/getAll.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<Qlik.Sense.ServiceClusterManager.Model.ServiceCluster>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.IdentifiedInternally)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "get", new { /* id=item.id */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.id */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.id */ })
             </td>
         </tr>
 }
