--- a/WebClient/Views/ServiceCluster/create.cshtml
+++ b/WebClient/Views/ServiceCluster/create.cshtml
@@ -1,6 +1,6 @@
 @model Qlik.Sense.ServiceClusterManager.Model.ServiceCluster
 
-<form asp-action="create">
+<form asp-action="gotocreate" method="POST">
     <div class="form-horizontal">
         <h4>ServiceCluster</h4>
         <hr />
@@ -50,14 +50,14 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="save" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="getAll">Back to List</a>
+    <a asp-action="getall">Back to List</a>
 </div>
 
 @section Scripts {
