--- a/WebClient/Views/ServiceCluster/getAll.cshtml
+++ b/WebClient/Views/ServiceCluster/getAll.cshtml
@@ -49,10 +49,10 @@
                 @Html.DisplayFor(modelItem => item.IdentifiedInternally)
             </td>
             <td>
-                @Html.ActionLink("Edit", "get", new { /* Id=item.Id */ }) |
+                @Html.ActionLink("Edit", "getEdit", new { Id=item.Id  }) |
                 @Html.ActionLink("Details", "Details", new { /* Id=item.Id */ }) |
                 @Html.ActionLink("Delete", "postdelete", "ServiceCluster",new {Id=item.Id})
-                <%=Html.ActionLink("Delete", "postdelete",new {Id=item.Id})%>
+               
             </td>
         </tr>
 }
